@@ -311,6 +311,7 @@ char * my_str_lwr(char *str);
 #include <string.h>
 #include <assert.h>
 
+/*! file descriptor support*/
 #define GPAC_HAS_FD
 
 #if __APPLE__ && defined GPAC_CONFIG_IOS
